--- a/Estilos.css
+++ b/Estilos.css
@@ -1,38 +1,141 @@
-h1 {
-	font-family: Georgia, "Times New Roman", Times, serif;
-	font-weight: bold;
-	color: #333366;
+/* fira-mono-latin-400-normal */
+/* noto-sans-latin-wght-normal */
+@font-face {
+    font-family: 'Noto Sans Variable';
+    font-style: normal;
+    font-display: swap;
+    font-weight: 100 900;
+    src: url(https://cdn.jsdelivr.net/fontsource/fonts/noto-sans:vf@latest/latin-wght-normal.woff2) format('woff2-variations');
+    unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+  }
+body{
+    font-family: 'Noto Sans Variable, sans-serif';
+    font-size: 1rem;
+}  
+.menu{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 0 2rem;
+    background-color:rgb(207, 219, 230);
+    border-bottom: 1px solid #e9ecef;
+    & span{
+        color: rgb(71, 106, 138);
+        font-size: 1.5rem;
+    }
 }
+.menu_ul{
+    display: flex;
+    padding: 0;
+    list-style: none;
+    li{
+        padding: 1rem;
+        background-color: rgba(135, 194, 196, 0.329);
+        transition: all 0.3s ease;
 
-h2 {
-	font-family: "Times New Roman", Times, serif;
-	font-weight: bolder;
-	color: #330066;
-	text-align:center
+        &:hover{
+            color: #343a40;
+            background-color: azure;
+        }
+    }
+    a{
+      color: darkslategrey;
+      padding: 1rem;
+      text-decoration: none;
+      display: block;  
+    }
+    
 }
+.presentacion{
+    padding: 2rem;
+    text-align: center;
+    & h1{
+        font-size: 3rem;
+        margin-bottom: 1rem;
+        text-transform: uppercase;
+        font-weight: 700;
+    }
+    & span{
+        color: cadetblue;
+        display: block;
+        font-size: 2rem;
+    }
+    & p{
+        font-size: 1rem;
+        text-align: justify;
+    }
+}
+.trabajo{
+    & .trabajo_wrapper{
+        display: grid;  
+        grid-template-columns: 1fr 1fr;
+        gap: 1rem;
+        padding: 2rem;
+    }
+    & .trabajo_article{
+        background-color: darkcyan;
+        padding: 1rem;
+        border-radius: 0.5rem;
+        text-align: center;
+        transition: all 0.3 ease;
+        &:hover{
+            transform: scale(1.05);
+        }
+    }
+    & h2{
+    color: rgba(58, 109, 109, 0.87);
+    font-size: 1.8rem;
+    }
+    & h3{
+        
+        font-size: 1.5rem;
+        margin-bottom: 1rem;
+    }
+    & p{
+        font-size: 1rem;
+    }
 
-h3 {
-	font-family: Georgia, "Times New Roman", Times, serif;
-	font-style: italic;
-	color: #666699;
-	text-align:center
 }
+.contacto{
+    display: flex;
+    padding: 0 2rem;
+    background-color:rgb(207, 219, 230);
+    & h2{
+        color: rgba(58, 109, 109, 0.87);
+        font-size: 1.8rem;
+    }
+    & h3{  
+        font-size: 1.5rem;
+        padding-top: 2rem;
+    }
+    & .contacto_article{
+        padding: 1rem;
+        border-radius: 0.5rem;
+    }
+    & .contacto_wrapper{
+        width: 70%;
+        display: flex;
+        align-content: center;
 
-p {
-	font-family: "Times New Roman", Times, serif;
-	font-size: 18px;
-}
+    }
+    & .foto{
+        max-width: 200px;
+        padding-top: 1.5rem;
+        padding-left: 10rem;
+        padding-right: 14rem;
 
-.piedepagina {
-	font-family: Georgia, "Times New Roman", Times, serif;
-	font-style: oblique;
-	line-height: normal;
-	font-weight: bold;
-	text-transform: uppercase;
-	color: #660033;
-    font-size: 12px;
+    }
+    & .icon{
+        padding-left: 4.5rem;
+        padding-top: 4rem;
+        align-items: center;
+    }
+    & p{
+        font-size: 1rem;
+    }
 }
-.capas {
-	font-family: "Times New Roman", Times, serif;
-	font-size: 15px;
+.piepagina{
+    text-align: center;
+    font-size: 1rem;
+    background-color: rgba(124, 183, 206, 0.397);
 }
